# mipt-cg

./: .gitmodules  CMakeLists.txt  empty.cpp  fragment.glsl  graphics.hpp  index.html  input.hpp  main.cpp  main.data  main.js  main.wasm  mesh.hpp  readme.md  shader.hpp  ui.hpp  utils.hpp  vertex.glsl  world.hpp
shaders/: fragment.glsl  fragment_blue.glsl  fragment_es.glsl  fragment_red.glsl  geometry.glsl  ground_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl  vertex2.glsl  vertex_es.glsl
transparent-triangles/: main.data  main.js  main.wasm
